# icecoast-conditions

./: .env.example  .gitignore  README.md  agents.md  docker-compose.yml  icecoast-pipeline  pyproject.toml
.github/workflows/: deploy.yml
deploy/: README.md  compose.yml  remote-deploy.sh
docs/adr/: 2026-04-06-open-meteo-postgres-schema.md
docs/operations/: cloudflare-pages-live-hosting.md
docs/superpowers/specs/: 2026-04-07-live-hosting-design.md  2026-04-07-multi-mountain-backfill-design.md
scripts/: init_db.py
src/backend/: Dockerfile  db.py  main.py  requirements.txt  schema.py
src/frontend/: Dockerfile  index.html  package-lock.json  package.json
src/frontend/src/: App.jsx  styles.css
src/pipeline/: __init__.py  backfill.py  cli.py  forecast.py  locations.csv  locations.py  openmeteo.py
tests/: conftest.py
tests/backend/: test_db_connection.py  test_db_gap_detection.py  test_forecast_db.py  test_forecast_persistence.py  test_main.py  test_weather_schema.py
tests/pipeline/: test_backfill_logic.py  test_cli.py  test_forecast.py  test_locations.py  test_openmeteo.py
